# server/src/routes/catalog.route.ts
@@ -1,4 +1,10 @@
-import { getSuperCategories, getSkills, getCompanies, getJobTitles } from "@/controllers/catalog.controller";
+import {
+  getSuperCategories,
+  getSkills,
+  getCompanies,
+  getJobTitles,
+  getCountries,
+} from "@/controllers/catalog.controller";
 import express, { Router } from "express";
 
 const router: Router = express.Router();
@@ -7,5 +13,6 @@ router.get("/supercategories", getSuperCategories);
 router.get("/skills", getSkills);
 router.get("/companies", getCompanies);
 router.get("/jobtitles", getJobTitles);
+router.get("/countries", getCountries);
 
 export default router;
